Add enable markdown doc generation